Snapshot 16/10-24 15:06 Beginning of adding different pages. Updated and added various HTML, js and css files

--- a/codebook.html
+++ b/codebook.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Codebook</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header>
+    <div><a href="index.html"><img src="ATCÍLogo.png" alt="A. Logo"></a></div>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html"><button class="navBtn">Home</button></a></li>
+                <li><a href="about.html"><button class="navBtn">About</button></a></li>
+                <li><a href="codebook.html"><button class="navBtn">Code Page</button></a></li>
+                <li><a href="webDevelopment.html"><button class="navBtn">Web Development</button></a></li>
+                <li>
+                    <button class="lightDarkModeBtn"></button>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section id="locateCodelanguage">
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>SQL (MySQL)</li>
+    </ul>
+</section>
+    <script src="main.js"></script>
 </body>
 </html>
