--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
 <main>
     <header>
-        <div><img src="ATCÍLogo.png" alt="A. Logo"</div>
+        <div><a href="index.html"><img src="ATCÍLogo.png" alt="A. Logo"></a></div>
         <div>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Code Page</li>
-                    <li>Web Development</li>
+                    <li><a href="index.html"><button class="navBtn">Home</button></a></li>
+                    <li><a href="about.html"><button class="navBtn">About</button></a></li>
+                    <li><a href="codebook.html"><button class="navBtn">Code Page</button></a></li>
+                    <li><a href="webDevelopment.html"><button class="navBtn">Web Development</button></a></li>
                     <li>
-                        <button></button>
+                        <button class="lightDarkModeBtn"></button>
                     </li>
                 </ul>
             </nav>
@@ -49,8 +49,8 @@
     </section>
     <footer>
         <ul>
-            <li>Kontakt mig via:</li>
-            <li>Mobil: +45 81 44 11 80</li>
+            <li>Contact Info:</li>
+            <li>Cell: +45 81 44 11 80</li>
             <li>Mail: andreas@revesz-gudmann.dk</li>
             <li><a href="https://www.facebook.com/profile.php?id=100056523714888">Facebook</a></li>
         </ul>
