--- a/webDevelopment.html
+++ b/webDevelopment.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Web Development</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header>
+    <div><a href="index.html"><img src="ATCÍLogo.png" alt="A. Logo"></a></div>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html"><button class="navBtn">Home</button></a></li>
+                <li><a href="about.html"><button class="navBtn">About</button></a></li>
+                <li><a href="codebook.html"><button class="navBtn">Code Page</button></a></li>
+                <li><a href="webDevelopment.html"><button class="navBtn">Web Development</button></a></li>
+                <li>
+                    <button class="lightDarkModeBtn"></button>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<script src="main.js"></script>
 </body>
 </html>
