--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li><a href="https://www.youtube.com/@atcilive">YouTube Channel</a></li>
             <li><a href="codebook.html">Online code book</a></li>
             <li><a href="webDevelopment.html">Web development</a></li>
+            <li><a href="taxindkcalculator.html">Tax in Denmark calculator</a></li>
         </ul>
     </section>
     <footer>
@@ -54,6 +55,20 @@
             <li>Mail: andreas@revesz-gudmann.dk</li>
             <li><a href="https://www.facebook.com/profile.php?id=100056523714888">Facebook</a></li>
         </ul>
+        <form>
+            <h2>Send me an mail:) :</h2>
+            <div id="emailField">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" placeholder="example@mail.com" minlength="5" maxlength="50" required/>
+            </div>
+            <div id="messageField">
+                <label for="message">Message field (150 character limit):</label>
+                <textarea id="message" cols="40" rows="5" placeholder="Hey Andreas, I wanted to know about..." maxlength="150" required></textarea>
+            </div>
+            <div id="submit">
+                <input type="submit"/>
+            </div>
+        </form>
     </footer>
 </main>
 <script src="main.js"></script>
