Snapshot 23/10-2024 Version 1.2 Beginnings of tax calculator webapp.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="https://www.youtube.com/@atcilive">YouTube Channel</a></li>
             <li><a href="codebook.html">Online code book</a></li>
             <li><a href="webDevelopment.html">Web development</a></li>
-            <li><a href="taxindkcalculator.html">Tax in Denmark calculator</a></li>
+            <li><a href="taxCalculator.html">Salary after tax calculator</a></li>
         </ul>
     </section>
     <footer>
