Snapshot 18/11-2024 15:09 Added the generativeAI, and updated taxcalculator

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><a href="codebook.html">Online code book</a></li>
             <li><a href="webDevelopment.html">Web development</a></li>
             <li><a href="taxCalculator.html">Salary after tax calculator</a></li>
+            <li><a href="generativeAI.html">YouTube Video Idea Generator</a></li>
         </ul>
     </section>
     <footer>
