--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
             </div>
         </form>
     </footer>
+    <!-- data test-zone
+    <h1>Data from mongodb:</h1>
+    <p class="name"></p>
+    <p class="age"></p>
+    <p class="gender"></p>
+    -->
 </main>
 <script src="main.js"></script>
 </body>
