Snapshot 21/11-2024 17:18 Updated generative AI to work for youtube videos. Pretty much finished

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </form>
     </footer>
-    <!-- data test-zone
+    <!-- data test-zone!
     <h1>Data from mongodb:</h1>
     <p class="name"></p>
     <p class="age"></p>
