--- a/generativeAI.html
+++ b/generativeAI.html
@@ -63,10 +63,11 @@
 <section id="instructions">
     <h2 id="instructionsTitle">How to use the AI:</h2>
     <ul>
+        <li>Make sure to use HuggingFace API_KEY</li>
         <li>Use single keywords only</li>
         <li>English language only in input</li>
         <li>Use subjects prior to 2020. New celebrities etc. won't work</li>
-        <li>To reset API_key, press button in top right</li>
+        <li>To reset API_KEY, press button in top right</li>
         <li>Have fun:)</li>
     </ul>
 </section>
