--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             besides that as a fitness instructor. I've worked at Hørsholm Svømmehal/Hørsholm Svømmeforening, East
             Kilbride Badet, Albertslund Svøm og Fitness/Badesøen, Gribskov Svømmehal and Smiley Fitness APS.</p>
         <p>In my free time I play video games and makes online content, and besides that I am currently working on
-            starting my own company; Hitech Customs. To read more about me, click here!</p>
+            starting my own company; Hitech Customs. To read more about me, click <a href="about.html">here!</a></p>
     </section>
     <section id="sideProjects">
         <h2>Links to my side projects:</h2>
